<?xml version="1.0"?>
<package>
  <name>ros2_cpp_py</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wsacul@gmail.com">Lucas Walter</maintainer>
  <license>TODO: License declaration</license>

  <maintainer email="wsacul@gmail.com">Lucas Walter</maintainer>

  <license>BSD 3.0</license>

  <url type="website">https://github.com/lucasw/lambda</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <!-- nodelet plugin="${prefix}/nodelet_lambda_ros.xml" /-->
  </export>

</package>
